--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.11.15",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2",
+    "multer": "^2.0.0-rc.1",
     "nodemon": "^2.0.7"
   }
 }
